--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       name="twitter:description"
       content="WebDev Noob"
     />
-    <meta name="twitter:image" content="./favicon.ico" />
+    <meta name="twitter:image" content="https://twitter.com/kuma_r_ahul/photo" />
 
     <!-- <meta property="og:title" content="Myrtis Beaverdam | Front End Web Developer" />
     <meta property="og:description" content="JavaScript wizard, chaotic good" />
