--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Rahul Kumar's Portfolio Website" />
-    <meta
-      name="keyword"
-      content="portfolio, javascript, fullstack, react, linux, linkedIn, github, developer"
-    />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Rahul Kumar's Portfolio Website" />
+		<meta
+			name="keyword"
+			content="portfolio, javascript, fullstack, react, linux, linkedIn, github, developer"
+		/>
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Rahul Kumar | FullStack Developer"
-    />
-    <meta
-      name="twitter:description"
-      content="WebDev Noob"
-    />
-    <meta name="twitter:image" content="https://twitter.com/kuma_r_ahul/photo" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Rahul Kumar | FullStack Developer" />
+		<meta name="twitter:description" content="WebDev Noob" />
+		<meta
+			name="twitter:image"
+			content="https://photos.app.goo.gl/9k8DPQ5Q99WPXSka7"
+		/>
 
-    <!-- <meta property="og:title" content="Myrtis Beaverdam | Front End Web Developer" />
-    <meta property="og:description" content="JavaScript wizard, chaotic good" />
-    <meta property="og:image" content="https://example.com/image.jpg" />
-    <meta property="og:url" content="https://example.com" />
-    <meta property="og:type" content="website" /> -->
+		<meta property="og:title" content="Rahul Kumar | FullStack Developer" />
+		<meta property="og:description" content="WebDev Beginer" />
+		<meta
+			property="og:image"
+			content="https://photos.app.goo.gl/9k8DPQ5Q99WPXSka7"
+		/>
+		<meta property="og:url" content="https://www.kumarahul.xyz" />
+		<meta property="og:type" content="website" />
 
-    <title>Rahul Kumar</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+		<title>Rahul Kumar</title>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
 </html>
