working on image meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,14 @@
 		<meta name="twitter:description" content="WebDev Noob" />
 		<meta
 			name="twitter:image"
-			content="https://photos.app.goo.gl/9k8DPQ5Q99WPXSka7"
+			content="https://www.kumarahul.xyz/favicon.ico"
 		/>
+		<meta name="twitter:site" content="@kumar_r_ahul" />
+		<meta name="twitter:creator" content="@kumar_r_ahul" />
 
 		<meta property="og:title" content="Rahul Kumar | FullStack Developer" />
 		<meta property="og:description" content="WebDev Beginer" />
-		<meta
-			property="og:image"
-			content="https://photos.app.goo.gl/9k8DPQ5Q99WPXSka7"
-		/>
+		<meta property="og:image" content="https://www.kumarahul.xyz/favicon.ico" />
 		<meta property="og:url" content="https://www.kumarahul.xyz" />
 		<meta property="og:type" content="website" />
 
